# StateOne

./: CMakeLists.txt  README.md  a.txt  block.txt  linuxAbout  main.cpp
include/: ArrayPart.h  BaseOnePart.h  ExerciseOne.h  FilePartOne.h  StringPart.h  advanceOne.h
noteAbout/: linuxAbout.cpp  shellCmd.cpp
src/: ArrayPart.cpp  BaseOnePart.cpp  ExerciseOne.cpp  FilePartOne.cpp  StringPart.cpp  advanceOne.cpp
testAbout/: testCompile.cpp  testCompile.h  testCompile2.cpp  testCompile2.h  testCompile3.h
